# rsmodules

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  Rprofile.site  bloat  build.sh  build_linux_static.sh  build_linux_static_debug.sh  build_static.sh  clippy  clippy.toml  create_dist.sh  deploy_beta.sh  env.sh  module_load_tools.sh  module_unload_tools.sh  rmodules.pm  rmodules.py  rsmodules.pm  rsmodules.py  run.sh  rustfmt.toml  setup_rmodules.csh  setup_rmodules.sh  setup_rmodules_dev.csh  setup_rmodules_dev.sh  setup_rmodules_midas.csh  setup_rmodules_midas.sh  setup_rsmodules.csh  setup_rsmodules.sh  setup_rsmodules_dev.csh  setup_rsmodules_dev.sh
examples/: perl_rmodules.pl  perl_rsmodules.pl  python_rmodules.py  python_rsmodules.py  run_perl.sh  run_python.sh
src/: autoload.rs  cache.rs  macros.rs  main.rs  manage.rs  rmodules.rs  rsmodules.rs  script.rs  wizard.rs
tools/: migrate.sh  tcl2rhai.tcl
