[package]
name = "rsmodules"
version = "0.6.3"
authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"
rhai = "0.7.1"
walkdir = "1"
bincode = "0.6.1"
rustc-serialize = "0.3.23"
users = "0.5.0"
shellexpand = "1.0.0"
regex = "0.2.1"
getopts = "0.2.14"
is_executable = "0.1.0"
gumdrop = "0.5.0"
gumdrop_derive = "0.5.0"
ansi_term = "0.9"
glob = "0.2"
dirs = "1.0"
pbr = "1.0.1"

[[bin]]
name = "rsmodules"
path = "src/main.rs"
