[package]
name = "rsmodules"
version = "0.7.3"
authors = ["Frederik Delaere <frederik.delaere@ugent.be>"]
edition = "2018"

[dependencies]
rand = "0.3"
lazy_static = "1.2.0"
#rhai = "0.7.1"
rhai = "0.9.1"
walkdir = "1"
bincode = "0.6.1"
rustc-serialize = "0.3.23"
users = "0.5.0"
shellexpand = "1.0.0"
regex = "0.2.1"
getopts = "0.2.19"
is_executable = "0.1.0"
gumdrop = "0.5.0"
gumdrop_derive = "0.5.0"
ansi_term = "0.9"
glob = "0.2"
dirs = "1.0"
pbr = "1.0.1"
natord = "1.0.9"
chrono = "0.4.11"
#smallvec = "0.6.10"

[dependencies.mdcat]
version = "0.12.1"
default-features = false
features = ["vte50", "iterm2", "terminology"]

[dependencies.pulldown-cmark]
version = "^0.2"
default-features = false
features = []

[dependencies.syntect]
version = "^3"
default-features = false
features = ["parsing", "assets", "dump-load"]

[[bin]]
name = "rsmodules"
path = "src/main.rs"
